# rust-python-coverage

./: .codecov.yml  .gitignore  Cargo.toml  LICENSE  README.md  clean.sh  codecov.yml  flake.nix  pyproject.toml  requirements.txt  run-cov.sh  toolchain.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
html/: index.html
html/coverage/home/mike/workspace/rust-python-coverage/src/: lib.rs.html
python/foobar/: __init__.py
src/: lib.rs
tests/: test_foobar.py
