[project]
name = "foobar"
version = "0.1.1"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "maturin>=1.9.6",
]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "foobar._foobar"
